@@ -753,6 +753,7 @@ Other memory:
 	* Fix UDP recvfrom timeout bug
 	* Correct processing of input UDP broadcast packets.
 	* Verfied basic DHCP client functionality (netutils/dhcpc)
+	* Implemented send() timeout logic
 </pre></ul>
 
 <table width ="100%">
