@@ -265,3 +265,4 @@
 	* Fix UDP recvfrom timeout bug
 	* Correct processing of input UDP broadcast packets.
 	* Verfied basic DHCP client functionality (netutils/dhcpc)
+	* Implemented send() timeout logic
